tests/snapshots/readback_hvm__addition.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/readback_hvm/addition.bend
---
(+ 2 1)
