tests/snapshots/readback_hvm__bad_net.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/readback_hvm/bad_net.bend
---
[4m[1m[33mWarnings:[0m
[1mDuring execution :[0m
[1mDuring readback:[0m
  Unable to interpret the HVM result as a valid Bend term. (Reached Root)

<Invalid>
