tests/snapshots/readback_hvm__bad_net1.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/readback_hvm/bad_net1.bend
---
λa λb a
