tests/snapshots/readback_hvm__bad_net3.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/readback_hvm/bad_net3.bend
---
λa λb a
