tests/snapshots/readback_hvm__complicated_dup.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/readback_hvm/complicated_dup.bend
---
λa (λ$b (a ($b $c)) λ$c (a ($b $c)))
