tests/snapshots/readback_hvm__fst_snd.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/readback_hvm/fst_snd.bend
---
(λa a (λb b {{1 3} 2}))
