tests/snapshots/readback_hvm__nested_let.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/readback_hvm/nested_let.bend
---
3
