tests/snapshots/readback_hvm__simple_tup.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/readback_hvm/simple_tup.bend
---
{0 42}
