tests/snapshots/readback_hvm__tup_add.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/readback_hvm/tup_add.bend
---
(+ 1 2)
